# libgeos

./: .gitignore  Makefile.in  aclocal.m4  configure  configure.in
capi/: Makefile.in
debian/: NEWS  changelog  control  control.in  copyright  libgeos++-dev.install.in  libgeos-dev.install  rules
doc/: Makefile.in
include/: Makefile.in  config.h.in
include/geos/: Makefile.in
include/geos/algorithm/: Makefile.in
include/geos/geom/: Makefile.in
include/geos/geomgraph/: Makefile.in
include/geos/index/: Makefile.in
lua/: Makefile.in
macros/: Makefile.in
php/: Makefile.in
php/test/: Makefile.in
src/: Makefile.in
src/algorithm/: Makefile.in
src/geom/: Makefile.in
src/geom/prep/: Makefile.in
src/geomgraph/: Makefile.in
src/index/: Makefile.in
src/io/: Makefile.in
src/linearref/: Makefile.in
src/noding/: Makefile.in
src/operation/: Makefile.in
src/planargraph/: Makefile.in
src/precision/: Makefile.in
src/simplify/: Makefile.in
src/triangulate/: Makefile.in
src/util/: Makefile.in
swig/: Makefile.am  Makefile.in  geos.i.in  typemap.i
swig/common/: geom.i  typemap.i
swig/lua/: Makefile.am  Makefile.in  geos_wrap.cxx  lua.i  typemap.i
swig/lua/tests/: Makefile.am  Makefile.in  example.lua  print_geos.lua
swig/python/: Makefile.am  Makefile.in  python.i
swig/ruby/: Makefile.am  Makefile.in  geos_wrap.cxx
tests/: Makefile.in
tests/bigtest/: Makefile.in
tests/geostest/: Makefile.in
tests/perf/: Makefile.in
tests/thread/: Makefile.in
tests/unit/: Makefile.in
tests/xmltester/: Makefile.in
tools/: Makefile.in
(+62 files in other folders)
